--- a/deploy/install/030_crd_artemis_address.yaml
+++ b/deploy/install/030_crd_artemis_address.yaml
@@ -2,7 +2,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.7.0
+    controller-gen.kubebuilder.io/version: v0.10.0
   name: activemqartemisaddresses.broker.amq.io
 spec:
   group: broker.amq.io
@@ -57,7 +57,7 @@ spec:
                     format: int64
                     type: integer
                   configurationManaged:
-                    description: ' If the queue is configuration managed'
+                    description: If the queue is configuration managed
                     type: boolean
                   consumerPriority:
                     description: Consumer Priority
@@ -330,9 +330,3 @@ spec:
     storage: false
     subresources:
       status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
