Changed cryptic names of resources

--- a/examples/address/address_queue.yaml
+++ b/examples/address/address_queue.yaml
@@ -1,7 +1,7 @@
 apiVersion: broker.amq.io/v1beta1
 kind: ActiveMQArtemisAddress
 metadata:
-  name: ex-aaoaddress
+  name: artemis-address-queue
 spec:
   addressName: myAddress0
   queueName: myQueue0
