--- a/examples/address/address_topic.yaml
+++ b/examples/address/address_topic.yaml
@@ -1,7 +1,7 @@
 apiVersion: broker.amq.io/v1beta1
 kind: ActiveMQArtemisAddress
 metadata:
-  name: ex-aaoaddress
+  name: artemis-address-topic
 spec:
   addressName: emptyAddress
   routingType: multicast
