--- a/examples/artemis/artemis_cluster_with_resources.yaml
+++ b/examples/artemis/artemis_cluster_with_resources.yaml
@@ -1,7 +1,7 @@
 apiVersion: broker.amq.io/v1beta1
 kind: ActiveMQArtemis
 metadata:
-  name: ex-aao
+  name: artemis-broker-resources
 spec:
   deploymentPlan:
     size: 2
