--- a/bundle/manifests/broker.amq.io_activemqartemises.yaml
+++ b/bundle/manifests/broker.amq.io_activemqartemises.yaml
@@ -10,6 +10,8 @@ spec:
     kind: ActiveMQArtemis
     listKind: ActiveMQArtemisList
     plural: activemqartemises
+    shortNames:
+    - aa
     singular: activemqartemis
   scope: Namespaced
   versions:
