--- a/deploy/crds/broker_activemqartemis_crd.yaml
+++ b/deploy/crds/broker_activemqartemis_crd.yaml
@@ -10,6 +10,8 @@ spec:
     kind: ActiveMQArtemis
     listKind: ActiveMQArtemisList
     plural: activemqartemises
+    shortNames:
+    - aa
     singular: activemqartemis
   scope: Namespaced
   versions:
