[#442] Allow configuring PodDisruptionBudget for broker deployment

--- a/bundle/manifests/activemq-artemis-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/activemq-artemis-operator.clusterserviceversion.yaml
@@ -487,6 +487,14 @@ spec:
           - list
           - watch
         - apiGroups:
+          - policy
+          resources:
+          - poddisruptionbudgets
+          verbs:
+          - create
+          - delete
+          - get
+        - apiGroups:
           - rbac.authorization.k8s.io
           resources:
           - rolebindings
