[#516] reflect upgrade version and image urls in the status, validate and simplify logic around version matching and upgrades

--- a/deploy/crds/broker_activemqartemis_crd.yaml
+++ b/deploy/crds/broker_activemqartemis_crd.yaml
@@ -919,10 +919,10 @@ spec:
                         type: array
                     type: object
                   image:
-                    description: The image used for the broker deployment
+                    description: The image used for the broker, all upgrades are disabled. Needs a corresponding initImage
                     type: string
                   initImage:
-                    description: The init container image used to configure broker
+                    description: The init container image used to configure broker, all upgrades are disabled. Needs a corresponding image
                     type: string
                   jolokiaAgentEnabled:
                     description: If true enable the Jolokia JVM Agent
@@ -1445,7 +1445,7 @@ spec:
                 description: The ingress domain to expose the application. By default, on Kubernetes it is apps.artemiscloud.io and on OpenShift it is the Ingress Controller domain.
                 type: string
               upgrades:
-                description: Specifies the upgrades
+                description: Specifies the upgrades (deprecated in favour of Version)
                 properties:
                   enabled:
                     description: Set true to enable automatic micro version product upgrades, it is disabled by default.
@@ -1458,7 +1458,7 @@ spec:
                 - minor
                 type: object
               version:
-                description: The version of the broker deployment.
+                description: The desired version of the broker. Can be x, or x.y or x.y.z to configure upgrades
                 type: string
             type: object
           status:
@@ -1513,10 +1513,8 @@ spec:
                 items:
                   properties:
                     name:
-                      description: Name
                       type: string
                     resourceVersion:
-                      description: Resource Version
                       type: string
                   required:
                   - name
@@ -1541,6 +1539,26 @@ spec:
                     items:
                       type: string
                     type: array
+                type: object
+              upgrade:
+                properties:
+                  majorUpdates:
+                    type: boolean
+                  minorUpdates:
+                    type: boolean
+                  patchUpdates:
+                    type: boolean
+                  securityUpdates:
+                    type: boolean
+                type: object
+              version:
+                properties:
+                  brokerVersion:
+                    type: string
+                  image:
+                    type: string
+                  initImage:
+                    type: string
                 type: object
             required:
             - podStatus
