[#124] support scale subresource for scale to zero

--- a/bundle/manifests/broker.amq.io_activemqartemises.yaml
+++ b/bundle/manifests/broker.amq.io_activemqartemises.yaml
@@ -2314,6 +2314,9 @@ spec:
                   - type
                   type: object
                 type: array
+              deploymentPlanSize:
+                format: int32
+                type: integer
               externalConfigs:
                 description: Current state of external referenced resources
                 items:
@@ -2374,6 +2377,9 @@ spec:
     served: true
     storage: true
     subresources:
+      scale:
+        specReplicasPath: .spec.deploymentPlan.size
+        statusReplicasPath: .status.deploymentPlanSize
       status: {}
   - name: v2alpha1
     schema:
