--- a/deploy/crds/broker_activemqartemis_crd.yaml
+++ b/deploy/crds/broker_activemqartemis_crd.yaml
@@ -1508,6 +1508,9 @@ spec:
                   - type
                   type: object
                 type: array
+              deploymentPlanSize:
+                format: int32
+                type: integer
               externalConfigs:
                 description: Current state of external referenced resources
                 items:
@@ -1567,6 +1570,9 @@ spec:
     served: true
     storage: true
     subresources:
+      scale:
+        specReplicasPath: .spec.deploymentPlan.size
+        statusReplicasPath: .status.deploymentPlanSize
       status: {}
   - name: v2alpha1
     schema:
